--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
 
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.2'
 }
